7 beautify json strings

--- a/notebooks/senzing-sdk-api-specification/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/senzing-sdk-api-specification/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -268,8 +268,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    datasource_json = \"{\\\"DSRC_CODE\\\": \\\"CUSTOMER\\\"}\" \n",
-    "\n",
+    "    datasource = {\n",
+    "        \"DSRC_CODE\": \"CUSTOMER\"\n",
+    "    } \n",
+    "    datasource_json=json.dumps(datasource)\n",
     "    response_bytearray = bytearray()\n",
     "\n",
     "    g2_config.addDataSourceV2(config_handle, datasource_json, response_bytearray)\n",
@@ -294,8 +296,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    datasource_json = \"{\\\"DSRC_CODE\\\": \\\"CUSTOMER\\\"}\" \n",
-    "\n",
+    "    datasource = {\n",
+    "        \"DSRC_CODE\": \"CUSTOMER\"\n",
+    "    } \n",
+    "    datasource_json=json.dumps(datasource)\n",
     "    response_bytearray = bytearray()\n",
     "    \n",
     "    id = 0\n",
@@ -425,7 +429,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    entitytype_json = \"{\\\"ETYPE_CODE\\\": \\\"PROFESSIONAL\\\", \\\"ECLASS_CODE\\\": \\\"ACTOR\\\"}\" \n",
+    "    entitytype = {\n",
+    "        \"ETYPE_CODE\": \"PROFESSIONAL\",\n",
+    "        \"ECLASS_CODE\": \"ACTOR\"\n",
+    "    }\n",
+    "    entitytype_json = json.dumps(entitytype)\n",
     "    response_bytearray = bytearray()\n",
     "\n",
     "    g2_config.addEntityTypeV2(config_handle, entitytype_json, response_bytearray)\n",
@@ -474,8 +482,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    entitytype_json = \"{\\\"ETYPE_CODE\\\": \\\"PROFESSIONAL\\\", \\\"ECLASS_CODE\\\": \\\"ACTOR\\\"}\" \n",
-    "\n",
+    "    entitytype = {\n",
+    "        \"ETYPE_CODE\": \"PROFESSIONAL\", \n",
+    "        \"ECLASS_CODE\": \"ACTOR\"\n",
+    "    } \n",
+    "    entitytype_json=json.dumps(entitytype)\n",
     "    g2_config.deleteEntityTypeV2(config_handle, entitytype_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -530,8 +541,10 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureElm_json=\"{\\\"FELEM_CODE\\\":\\\"GIVEN_NAME\\\"}\"\n",
-    "\n",
+    "    featureElm={\n",
+    "        \"FELEM_CODE\": \"GIVEN_NAME\"\n",
+    "    }\n",
+    "    featureElm_json=json.dumps(featureElm)\n",
     "    g2_config.getFeatureElementV2(config_handle, featureElm_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -555,8 +568,13 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureElm_json = \"{\\\"FELEM_CODE\\\":\\\"myNewFelem\\\",\\\"FELEM_ID\\\":789,\\\"TOKENIZE\\\":1,\\\"DATA_TYPE\\\":\\\"string\\\"}\"\n",
-    "\n",
+    "    featureElm = {\n",
+    "        \"FELEM_CODE\": \"myNewFelem\",\n",
+    "        \"FELEM_ID\":789,\n",
+    "        \"TOKENIZE\":1,\n",
+    "        \"DATA_TYPE\":\"string\"\n",
+    "    }\n",
+    "    featureElm_json=json.dumps(featureElm)\n",
     "    g2_config.addFeatureElementV2(config_handle, featureElm_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -579,7 +597,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureElm_json = \"{\\\"FELEM_CODE\\\":\\\"myNewFelem\\\"}\"\n",
+    "    featureElm = {\n",
+    "        \"FELEM_CODE\": \"myNewFelem\"\n",
+    "    }\n",
+    "    featureElm_json=json.dumps(featureElm)\n",
     "    g2_config.deleteFeatureElementV2(config_handle, featureElm_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -651,7 +672,10 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_json =  \"{\\\"FTYPE_CODE\\\":\\\"name\\\"}\"\n",
+    "    feature = {\n",
+    "        \"FTYPE_CODE\": \"name\"\n",
+    "    }\n",
+    "    feature_json=json.dumps(feature)\n",
     "    g2_config.getFeatureV2(config_handle, feature_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -675,8 +699,16 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_json = \"{\\\"FTYPE_CODE\\\":\\\"myNewFtype\\\",\\\"FTYPE_ID\\\":789,\\\"FCLASS_CODE\\\":\\\"ELECTED_ID\\\",\\\"FTYPE_FREQ\\\":\\\"FF\\\", \\\"FEATURE_ELEMENTS\\\":[{\\\"FELEM_CODE\\\":\\\"expression\\\"}]}\"\n",
-    "\n",
+    "    feature = {\n",
+    "        \"FTYPE_CODE\": \"myNewFtype\",\n",
+    "        \"FTYPE_ID\": 789,\n",
+    "        \"FCLASS_CODE\": \"ELECTED_ID\",\n",
+    "        \"FTYPE_FREQ\": \"FF\", \n",
+    "        \"FEATURE_ELEMENTS\":[{\n",
+    "            \"FELEM_CODE\": \"expression\"\n",
+    "        }]\n",
+    "    }\n",
+    "    feature_json=json.dumps(feature)\n",
     "    g2_config.addFeatureV2(config_handle, feature_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -699,7 +731,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    feature_json = \"{\\\"FTYPE_CODE\\\":\\\"NAME\\\"}\"\n",
+    "    feature = {\n",
+    "        \"FTYPE_CODE\": \"NAME\"\n",
+    "    }\n",
+    "    feature_json=json.dumps(feature)\n",
     "    g2_config.deleteFeatureV2(config_handle, feature_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -720,7 +755,12 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    elmnt_json =  \"{\\\"FTYPE_CODE\\\":\\\"myNewFtype\\\", \\\"FELEM_CODE\\\":\\\"expression\\\",\\\"EXEC_ORDER\\\":4}\"\n",
+    "    elmnt =  {\n",
+    "        \"FTYPE_CODE\": \"myNewFtype\", \n",
+    "        \"FELEM_CODE\": \"expression\",\n",
+    "        \"EXEC_ORDER\": 4\n",
+    "    }\n",
+    "    elmnt_json=json.dumps(elmnt)\n",
     "    g2_config.addElementToFeatureV2(config_handle, elmnt_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -741,8 +781,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    elmnt_json = \"{\\\"FTYPE_CODE\\\":\\\"myNewFtype\\\", \\\"FELEM_CODE\\\":\\\"expression\\\"}\"\n",
-    "    \n",
+    "    elmnt = {\n",
+    "        \"FTYPE_CODE\": \"myNewFtype\", \n",
+    "        \"FELEM_CODE\": \"expression\"\n",
+    "    }\n",
+    "    elmnt_json=json.dumps(elmnt)\n",
     "    g2_config.deleteElementFromFeatureV2(config_handle, elmnt_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -819,7 +862,10 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureStandard_json = \"{\\\"SFCALL_ID\\\":4}\"\n",
+    "    featureStandard = {\n",
+    "        \"SFCALL_ID\": 4\n",
+    "    }\n",
+    "    featureStandard_json=json.dumps(featureStandard)\n",
     "    g2_config.getFeatureStandardizationFunctionCallV2(config_handle, featureStandard_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -843,7 +889,13 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureStandard_json = \"{\\\"FTYPE_CODE\\\":\\\"veh_vin\\\",\\\"SFCALL_ID\\\":789,\\\"SFUNC_CODE\\\":\\\"PARSE_ID\\\",\\\"EXEC_ORDER\\\":15}\"\n",
+    "    featureStandard = {\n",
+    "        \"FTYPE_CODE\": \"veh_vin\",\n",
+    "        \"SFCALL_ID\": 789,\n",
+    "        \"SFUNC_CODE\": \"PARSE_ID\",\n",
+    "        \"EXEC_ORDER\": 15\n",
+    "    }\n",
+    "    featureStandard_json=json.dumps(featureStandard)\n",
     "    g2_config.addFeatureStandardizationFunctionCallV2(config_handle, featureStandard_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -867,7 +919,10 @@
    "source": [
     "#Get the json from the previous function\n",
     "try:\n",
-    "    featureStandard_json = \"{\\\"SFCALL_ID\\\":789}\"\n",
+    "    featureStandard = {\n",
+    "        \"SFCALL_ID\": 789\n",
+    "    }\n",
+    "    featureStandard_json=json.dumps(featureStandard)\n",
     "    g2_config.deleteFeatureStandardizationFunctionCallV2(config_handle, featureStandard_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -943,7 +998,10 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureExpress_json = \"{\\\"EFCALL_ID\\\":1}\"\n",
+    "    featureExpress = {\n",
+    "        \"EFCALL_ID\": 1\n",
+    "    }\n",
+    "    featureExpress_json=json.dumps(featureExpress)\n",
     "    g2_config.getFeatureExpressionFunctionCallV2(config_handle, featureExpress_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -967,7 +1025,18 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureExpress_json = \"{\\\"FTYPE_CODE\\\":\\\"veh_vin\\\",\\\"EFCALL_ID\\\":789,\\\"EFUNC_CODE\\\":\\\"EXPRESS_ID\\\",\\\"EXEC_ORDER\\\":15, \\\"BOM_ELEMENTS\\\":[{\\\"FTYPE_CODE\\\":\\\"veh_vin\\\",\\\"FELEM_CODE\\\":\\\"id_num\\\",\\\"REQUIRED\\\":\\\"Yes\\\"}]}\"\n",
+    "    featureExpress = {\n",
+    "        \"FTYPE_CODE\": \"veh_vin\",\n",
+    "        \"EFCALL_ID\": 789,\n",
+    "        \"EFUNC_CODE\": \"EXPRESS_ID\",\n",
+    "        \"EXEC_ORDER\": 15, \n",
+    "        \"BOM_ELEMENTS\":[{\n",
+    "            \"FTYPE_CODE\": \"veh_vin\",\n",
+    "            \"FELEM_CODE\": \"id_num\",\n",
+    "            \"REQUIRED\": \"Yes\"\n",
+    "        }]\n",
+    "    }\n",
+    "    featureExpress_json=json.dumps(featureExpress)\n",
     "    g2_config.addFeatureExpressionFunctionCallV2(config_handle, featureExpress_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -990,7 +1059,13 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureExpressElm_json = \"{\\\"EFCALL_ID\\\":789, \\\"FTYPE_CODE\\\":\\\"address\\\",\\\"FELEM_CODE\\\":\\\"addr5\\\",\\\"REQUIRED\\\":\\\"Yes\\\"}\"\n",
+    "    featureExpressElm = {\n",
+    "        \"EFCALL_ID\": 789, \n",
+    "        \"FTYPE_CODE\": \"address\",\n",
+    "        \"FELEM_CODE\": \"addr5\",\n",
+    "        \"REQUIRED\": \"Yes\"\n",
+    "    }\n",
+    "    featureExpressElm_json=json.dumps(featureExpressElm)\n",
     "    g2_config.addFeatureExpressionFunctionCallElementV2(config_handle, featureExpressElm_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1011,7 +1086,12 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureExpressElm_json = \"{\\\"EFCALL_ID\\\":789, \\\"FTYPE_CODE\\\":\\\"ADDRESS\\\",\\\"FELEM_CODE\\\":\\\"ADDR5\\\"}\"\n",
+    "    featureExpressElm = {\n",
+    "        \"EFCALL_ID\": 789, \n",
+    "        \"FTYPE_CODE\": \"ADDRESS\",\n",
+    "        \"FELEM_CODE\": \"ADDR5\"\n",
+    "    }\n",
+    "    featureExpressElm_json=json.dumps(featureExpressElm)\n",
     "    g2_config.deleteFeatureExpressionFunctionCallElementV2(config_handle, featureExpressElm_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1033,7 +1113,10 @@
    "source": [
     "#Get the json from the previous function\n",
     "try:\n",
-    "    featureExpress_json = \"{\\\"EFCALL_ID\\\":789}\"\n",
+    "    featureExpress = {\n",
+    "        \"EFCALL_ID\": 789\n",
+    "    }\n",
+    "    featureExpress_json=json.dumps(featureExpress)\n",
     "    g2_config.deleteFeatureExpressionFunctionCallV2(config_handle, featureExpress_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1112,7 +1195,10 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureCompFunc_json = \"{\\\"CFCALL_ID\\\":2}\"\n",
+    "    featureCompFunc = {\n",
+    "        \"CFCALL_ID\": 2\n",
+    "    }\n",
+    "    featureCompFunc_json=json.dumps(featureCompFunc)\n",
     "    g2_config.getFeatureComparisonFunctionCallV2(config_handle, featureCompFunc_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1136,7 +1222,16 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureCompFunc_json = \"{\\\"FTYPE_CODE\\\":\\\"name_key\\\",\\\"CFCALL_ID\\\":789,\\\"CFUNC_CODE\\\":\\\"ID_COMP\\\",\\\"EXEC_ORDER\\\":15, \\\"BOM_ELEMENTS\\\":[{\\\"FELEM_CODE\\\":\\\"expression\\\"}]}\"\n",
+    "    featureCompFunc = {\n",
+    "        \"FTYPE_CODE\": \"name_key\",\n",
+    "        \"CFCALL_ID\": 789,\n",
+    "        \"CFUNC_CODE\": \"ID_COMP\",\n",
+    "        \"EXEC_ORDER\": 15, \n",
+    "        \"BOM_ELEMENTS\":[{\n",
+    "            \"FELEM_CODE\": \"expression\"\n",
+    "        }]\n",
+    "    }\n",
+    "    featureCompFunc_json=json.dumps(featureCompFunc)\n",
     "    g2_config.addFeatureComparisonFunctionCallV2(config_handle, featureCompFunc_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1160,7 +1255,10 @@
    "source": [
     "#Get input_json from previous function\n",
     "try:\n",
-    "    featureComp_json = \"{\\\"CFCALL_ID\\\":789}\"\n",
+    "    featureComp = {\n",
+    "        \"CFCALL_ID\": 789\n",
+    "    }\n",
+    "    featureComp_json=json.dumps(featureComp)\n",
     "    g2_config.deleteFeatureComparisonFunctionCallV2(config_handle, featureComp_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1181,7 +1279,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureCompElm_json =  \"{\\\"CFCALL_ID\\\":5, \\\"FELEM_CODE\\\":\\\"addr6\\\"}\"\n",
+    "    featureCompElm =  {\n",
+    "        \"CFCALL_ID\": 5, \n",
+    "        \"FELEM_CODE\": \"addr6\"\n",
+    "    }\n",
+    "    featureCompElm_json=json.dumps(featureCompElm)\n",
     "    g2_config.addFeatureComparisonFunctionCallElementV2(config_handle, featureCompElm_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1202,7 +1304,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureCompElm_json =  \"{\\\"CFCALL_ID\\\":5, \\\"FELEM_CODE\\\":\\\"ADDR4\\\"}\"\n",
+    "    featureCompElm =  {\n",
+    "        \"CFCALL_ID\": 5, \n",
+    "        \"FELEM_CODE\": \"ADDR4\"\n",
+    "    }\n",
+    "    featureCompElm_json=json.dumps(featureCompElm)\n",
     "    g2_config.deleteFeatureComparisonFunctionCallElementV2(config_handle, featureCompElm_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1281,7 +1387,10 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureFunc_json =  \"{\\\"DFCALL_ID\\\":2}\"\n",
+    "    featureFunc =  {\n",
+    "        \"DFCALL_ID\": 2\n",
+    "    }\n",
+    "    featureFunc_json=json.dumps(featureFunc)\n",
     "    g2_config.getFeatureDistinctFunctionCallV2(config_handle, featureFunc_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1305,7 +1414,16 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    featureFunc_json = \"{\\\"FTYPE_CODE\\\":\\\"name_key\\\",\\\"DFCALL_ID\\\":789,\\\"DFUNC_CODE\\\":\\\"FELEM_STRICT_SUBSET\\\",\\\"EXEC_ORDER\\\":15, \\\"BOM_ELEMENTS\\\":[{\\\"FELEM_CODE\\\":\\\"expression\\\"}]}\"\n",
+    "    featureFunc = {\n",
+    "        \"FTYPE_CODE\": \"name_key\",\n",
+    "        \"DFCALL_ID\": 789,\n",
+    "        \"DFUNC_CODE\": \"FELEM_STRICT_SUBSET\",\n",
+    "        \"EXEC_ORDER\": 15, \n",
+    "        \"BOM_ELEMENTS\":[{\n",
+    "            \"FELEM_CODE\": \"expression\"\n",
+    "        }]\n",
+    "    }\n",
+    "    featureFunc_json=json.dumps(featureFunc)\n",
     "    g2_config.addFeatureDistinctFunctionCallV2(config_handle, featureFunc_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1328,7 +1446,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureFunc_json = \"{\\\"DFCALL_ID\\\":1002}\"\n",
+    "    featureFunc = {\n",
+    "        \"DFCALL_ID\": 1002\n",
+    "    }\n",
+    "    featureFunc_json=json.dumps(featureFunc)\n",
     "    g2_config.deleteFeatureDistinctFunctionCallV2(config_handle, featureFunc_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1349,7 +1470,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureElmt_json = \"{\\\"DFCALL_ID\\\":5, \\\"FELEM_CODE\\\":\\\"addr6\\\"}\"\n",
+    "    featureElmt = {\n",
+    "        \"DFCALL_ID\": 5, \n",
+    "        \"FELEM_CODE\": \"addr6\"\n",
+    "    }\n",
+    "    featureElmt_json=json.dumps(featureElmt)\n",
     "    g2_config.addFeatureDistinctFunctionCallElementV2(config_handle, featureElmt_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1370,7 +1495,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    featureElmt_json = \"{\\\"DFCALL_ID\\\":5, \\\"FELEM_CODE\\\":\\\"ADDR4\\\"}\"\n",
+    "    featureElmt = {\n",
+    "        \"DFCALL_ID\": 5, \n",
+    "        \"FELEM_CODE\": \"ADDR4\"\n",
+    "    }\n",
+    "    featureElmt_json=json.dumps(featureElmt)\n",
     "    g2_config.deleteFeatureDistinctFunctionCallElementV2(config_handle, featureElmt_json)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1449,8 +1578,11 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    input_json = \"{\\\"ATTR_CODE\\\":\\\"DATA_SOURCE\\\"}\"\n",
-    "    g2_config.getAttributeV2(config_handle, input_json, response_bytearray)\n",
+    "    data = {\n",
+    "        \"ATTR_CODE\": \"DATA_SOURCE\"\n",
+    "    }\n",
+    "    data_json=json.dumps(data)\n",
+    "    g2_config.getAttributeV2(config_handle, data_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())\n",
@@ -1473,7 +1605,18 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    attr_json = \"{\\\"ATTR_CODE\\\":\\\"myNewAttr\\\",\\\"ATTR_ID\\\":789,\\\"ATTR_CLASS\\\":\\\"attribute\\\",\\\"FTYPE_CODE\\\":\\\"name_key\\\",\\\"FELEM_CODE\\\":\\\"latitude\\\",\\\"FELEM_REQ\\\":\\\"myReqValue\\\",\\\"DEFAULT_VALUE\\\":\\\"myDefault\\\",\\\"ADVANCED\\\":\\\"Y\\\",\\\"INTERNAL\\\":1}\"\n",
+    "    attr = {\n",
+    "        \"ATTR_CODE\": \"myNewAttr\",\n",
+    "        \"ATTR_ID\": 789,\n",
+    "        \"ATTR_CLASS\": \"attribute\",\n",
+    "        \"FTYPE_CODE\": \"name_key\",\n",
+    "        \"FELEM_CODE\": \"latitude\",\n",
+    "        \"FELEM_REQ\": \"myReqValue\",\n",
+    "        \"DEFAULT_VALUE\": \"myDefault\",\n",
+    "        \"ADVANCED\": \"Y\",\n",
+    "        \"INTERNAL\": 1\n",
+    "    }\n",
+    "    attr_json=json.dumps(attr)\n",
     "    g2_config.addAttributeV2(config_handle, attr_json, response_bytearray)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -1496,8 +1639,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    input_json = \"{\\\"ATTR_CODE\\\":\\\"NAME_FIRST\\\"}\"\n",
-    "    g2_config.deleteAttributeV2(config_handle, input_json)\n",
+    "    data = {\n",
+    "        \"ATTR_CODE\": \"NAME_FIRST\"\n",
+    "    }\n",
+    "    data_json=json.dumps(data)\n",
+    "    g2_config.deleteAttributeV2(config_handle, data_json)\n",
     "    \n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())"
@@ -1614,7 +1760,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "309.767px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
