--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -32,7 +32,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Helper class for JSON rendering\n",
     "\n",
@@ -44,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class RenderJSON(object):\n",
@@ -196,7 +200,7 @@
     "Create a new instance of the config manager and assign it to a variable.\n",
     "Then, call the appropriate initialization method (such as initV2) to initialize the config manager.\n",
     "\n",
-    "During the call, the initialization methods accept the following parameters:\n",
+    "###### Parameters\n",
     "\n",
     "- **module_name:** (str) A short name given to this instance of the G2 engine (i.e. your G2Module object)\n",
     "- **senzing_config_json:** (JSON str) A JSON document containing system parameters.\n",
@@ -228,7 +232,7 @@
     "\n",
     "Use `addConfig()` to add a configuration JSON document to the data repository.\n",
     "\n",
-    "The `addConfig()` function accepts the following parameters as input:\n",
+    "###### Parameters\n",
     "\n",
     "- **senzing_model_config_json:** (JSON str) The configuration JSON document.\n",
     "- **config_comment:** (str) A free-form string of comments describing the configuration document.\n",
@@ -261,6 +265,7 @@
     "###  getConfigList\n",
     "\n",
     "Use `getConfigList()` to retrieve a list of the configuration JSON documents contained in the data repository.\n",
+    "###### Parameters\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method to print or store for later; **not** a string"
    ]
@@ -289,7 +294,7 @@
     "\n",
     "Use `getConfig()` to retrieve a specific configuration JSON document from the data repository. \n",
     "\n",
-    "The `getConfig()` function accepts the following parameters as input:\n",
+    "###### Parameters\n",
     "\n",
     "- **config_id_bytearray:** (bytearray) The configID for the config document that you wish to retrieve.\n",
     "\n",
@@ -322,7 +327,7 @@
     "\n",
     "Use `setDefaultConfigID()` to set the default configuration JSON document in the data repository. \n",
     "\n",
-    "The `setDefaultConfigID()` function accepts the following parameters as input:\n",
+    "###### Parameters\n",
     "\n",
     "- **config_id_bytearray:** (bytearray) The configuration ID for a configuration JSON document previously added to the database."
    ]
@@ -348,7 +353,7 @@
     "\n",
     "Use `getDefaultConfigID()` to retrieve a specific configuration JSON document from the data repository.\n",
     "\n",
-    "The `getDefaultConfigID()` function accepts the following parameters as input:\n",
+    "###### Parameters\n",
     "\n",
     "- **config_id_bytearray:** (bytearray) Returns the configID for the current default configuration, or 0 if none is set."
    ]
