--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -267,7 +267,7 @@
     "Use `getConfigList()` to retrieve a list of the configuration JSON documents contained in the data repository.\n",
     "###### Parameters\n",
     "\n",
-    "- **response_bytearray:** (bytearray) Object to store the output of the method to print or store for later; **not** a string"
+    "- **response_bytearray:** (bytearray) Object to store the output of the method to print or store for later. **Warning:** This is not a *string*"
    ]
   },
   {
@@ -298,7 +298,7 @@
     "\n",
     "- **config_id_bytearray:** (bytearray) The configID for the config document that you wish to retrieve.\n",
     "\n",
-    "- **response_bytearray:** (bytearray) Object to store the output of the method to print or store for later; **not** a string"
+    "- **response_bytearray:** (bytearray) Object to store the output of the method to print or store for later. **Warning:** This is not a *string*"
    ]
   },
   {
