--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,31 +114,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'senzing_config_json' (str)\n",
+      "Default config already set\n",
+      "Stored 'config_id_bytearray' (bytearray)\n"
+     ]
+    }
+   ],
    "source": [
     "%run senzing-init-config.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "%store -r senzing_config_json\n",
-    "%store -r config_id_bytearray\n",
-    "config_id=config_id_bytearray.decode()"
+    "%store -r config_id_bytearray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"3a46979f-44e5-4f95-99ab-5330df1c5114\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
+       "        document.getElementById('3a46979f-44e5-4f95-99ab-5330df1c5114').appendChild(renderjson({\"PIPELINE\": {\"CONFIGPATH\": \"/etc/opt/senzing\", \"SUPPORTPATH\": \"/opt/senzing/data\", \"RESOURCEPATH\": \"/opt/senzing/g2/resources\"}, \"SQL\": {\"CONNECTION\": \"postgresql://postgres:postgres@senzing-postgres:5432:G2/\"}}))\n",
+       "        });\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "RenderJSON(senzing_config_json)"
    ]
@@ -152,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,21 +200,17 @@
     "\n",
     "To start using Senzing G2Engine, create and initialize an instance.\n",
     "This should be done once per process.\n",
-    "The `initV2()` method accepts the following parameters:\n",
+    "###### Parameters\n",
     "\n",
-    "- **module_name:** A short name given to this instance of the G2Engine\n",
+    "- **module_name:** (str) A short name given to this instance of the G2Engine\n",
     "  object.\n",
-    "- **senzing_config_json:** A JSON string containing configuration parameters.\n",
-    "- **verbose_logging:** A boolean which enables diagnostic logging.\n",
-    "- **config_id:** (optional) The identifier value for the engine configuration\n",
-    "  can be returned here.\n",
-    "\n",
-    "Calling this function will return \"0\" upon success."
+    "- **senzing_config_json:** (str) A JSON string containing configuration parameters.\n",
+    "- **verbose_logging:** (bool) A boolean which enables diagnostic logging."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -209,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +250,20 @@
    "source": [
     "### initWithConfigIDV2\n",
     "\n",
-    "Alternatively `initWithConfigIDV2()` can be used to specify a configuration."
+    "Alternatively `initWithConfigIDV2()` can be used to specify a configuration.\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **module_name:** (str) A short name given to this instance of the G2Engine\n",
+    "  object.\n",
+    "- **senzing_config_json:** (str) A JSON string containing configuration parameters.\n",
+    "- **verbose_logging:** (bool) A boolean which enables diagnostic logging.\n",
+    "- **config_id_bytearray:** (bytearray) The configID that you want to initialize the engine with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +271,7 @@
     "    return_code = g2_engine.initWithConfigIDV2(\n",
     "        module_name,\n",
     "        senzing_config_json,\n",
-    "        config_id,\n",
+    "        config_id_bytearray,\n",
     "        verbose_logging)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -249,18 +285,22 @@
     "### reinitV2\n",
     "\n",
     "The `reinitV2()` function may be used to reinitialize the engine\n",
-    "using a specified initConfigID."
+    "using a specified initConfigID.\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **config_id_bytearray:** (bytearray) The configID that you want to initialize the engine with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    return_code = g2_engine.reinitV2(\n",
-    "        config_id)\n",
+    "        config_id_bytearray)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())"
@@ -278,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,23 +338,31 @@
     "Call `getActiveConfigID()` to return an identifier for the loaded\n",
     "Senzing engine configuration.\n",
     "The call will assign a long integer to a user-designated variable\n",
-    "-- the function itself will return \"0\" upon success.\n",
-    "The `getActiveConfigID()` method accepts one parameter as input:\n",
     "\n",
-    "- **configuration_id:** The identifier value for the engine configuration.\n",
+    "###### Parameters\n",
+    "\n",
+    "- **configuration_id_bytearray:** (bytearray) The identifier value for the engine configuration.\n",
     "  The result of function call is returned here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration id: 3541153556\n"
+     ]
+    }
+   ],
    "source": [
-    "configuration_id = bytearray()\n",
+    "configuration_id_bytearray = bytearray()\n",
     "try:\n",
-    "    g2_engine.getActiveConfigID(configuration_id)\n",
-    "    print(\"Configuration id: {0}\".format(configuration_id.decode()))\n",
+    "    g2_engine.getActiveConfigID(configuration_id_bytearray)\n",
+    "    print(\"Configuration id: {0}\".format(configuration_id_bytearray.decode()))\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getlastException())"
@@ -2922,7 +2970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
