--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -524,7 +524,7 @@
     "  This value is configurable to the system\n",
     "- **record_id:** (str) The record ID, used to identify distinct records\n",
     "- **data_as_json:** (str) A JSON document with the attribute data for the record\n",
-    "- **load_id:** (str **[optional]** ) The observation load ID for the record;\n",
+    "- **load_id:** (int **[optional]** ) The observation load ID for the record;\n",
     "  value can be null and will default to data_source"
    ]
   },
@@ -1782,7 +1782,7 @@
     "  with.  This value is configurable to the system\n",
     "- **record_id:** (str) The record ID, used to identify distinct records\n",
     "- **data_as_json:** (str) A JSON document with the attribute data for the record\n",
-    "- **load_id:** (int **[optional]** ) The observation load ID for the record;\n",
+    "- **load_id:** (str **[optional]** ) The observation load ID for the record;\n",
     "  value can be null and will default to datasource_code"
    ]
   },
@@ -1835,7 +1835,7 @@
     "- **record_id:** (str) The record ID, used to identify distinct records\n",
     "- **data_as_json:** (str) A JSON document with the attribute data for the record\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
-    "- **load_id:** (int **[optional]** ) The observation load ID for the record;\n",
+    "- **load_id:** (str **[optional]** ) The observation load ID for the record;\n",
     "  value can be null and will default to datasource_code"
    ]
   },
@@ -2507,7 +2507,7 @@
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "    \n",
-    "RenderJSON(response_bytearray)"
+    "print(response_bytearray.decode())"
    ]
   },
   {
@@ -2598,7 +2598,7 @@
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "\n",
-    "RenderJSON(response_bytearray)"
+    "print(response_bytearray.decode())"
    ]
   },
   {
@@ -2708,8 +2708,10 @@
     "  with. This value is configurable to the system.\n",
     "- **record_id:** (str) The record ID, used to identify distinct records.\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
-    "- **load_id:** T(int) he observation load ID for the record;\n",
-    "  value can be null and will default to dataSourceCode"
+    "- **load_id:** (str **[optional]** ) he observation load ID for the record;\n",
+    "  value can be null and will default to dataSourceCode\n",
+    "- **g2_engine_flags:** (int **[optioanl]** ) An integer specifying which entity details should be\n",
+    "  included in the export."
    ]
   },
   {
